# histreamer

./: CMakeLists.txt  arm-gcc-toolchain.cmake  h264_hisilicon_passthrough_vid_codecs.c  hi_sdk_helper.c  histreamer-audio.c  histreamer-video.c  vid_port.c  vid_stream.c  video_stream_util.c
hi_sdk/: hisi_comm.h
